<resources>
    <string name="app_name">TeethHelper</string>
    <string name="nameField">Name</string>
    <string name="passwordField">Password</string>
    <string name="passportField">Passport</string>
    <string name="addressField">Address</string>
    <string name="diseaseField">Disease</string>
    <string name="specializationField">Specialization</string>
    <string name="experienceField">Experience</string>
    <string name="berthField">Berth</string>
    <string name="serviceField">Service</string>
    <string name="patientField">Patient</string>
    <string name="doctorField">Doctor</string>
    <string name="sumField">Sum</string>
    <string name="dateField">Date</string>
    <string name="dateFieldAfter">After</string>
    <string name="dateFieldBefore">Before</string>
    <string name="manipulationField">Manipulation</string>
    <string name="costField">Cost</string>
    <string name="renderField">Render</string>
    <string name="visitField">Visit</string>
    <string name="add">Add</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="createRequest">Create Request</string>
    <string name="createReport">Create Report</string>
    <string name="typeOfRequest">Type of Request</string>
    <string name="table">Table</string>
    <string name="requestField">Request</string>
    <string name="commit">Commit</string>
    <string name="doctors">Doctors</string>
    <string name="patients">Patients</string>
    <string name="services">Services</string>
    <string name="renders">Renders</string>
    <string name="visits">Visits</string>
    <string name="visitsStatistic">Visits\nStatistic</string>
    <string name="done">Done!</string>
    <string name="error">Error!</string>
    <string name="invalidAfterDate">Invalid after date!</string>
    <string name="invalidBeforeDate">Invalid before date!</string>
    <string name="OK">OK</string>
    <string name="edit">Edit</string>
    <string name="invalidName">Invalid name</string>
    <string name="invalidPassport">Invalid passport</string>
    <string name="invalidAddress">Invalid address</string>
    <string name="invalidSpecialization">Invalid specialization</string>
    <string name="invalidExperience">Invalid experience</string>
    <string name="invalidBerth">Invalid berth</string>
    <string name="invalidDisease">Invalid disease</string>
    <string name="invalidPatient">Invalid patient</string>
    <string name="invalidDoctor">Invalid doctor</string>
    <string name="invalidService">Invalid service</string>
    <string name="invalidManipulation">Invalid manipulation</string>
    <string name="invalidCost">Invalid cost</string>
    <string name="invalidSum">Invalid sum</string>
    <string name="invalidDate">Invalid date</string>
    <string name="invalidYear">Invalid year</string>
    <string name="invalidMonth">Invalid month</string>
    <string name="invalidDay">Invalid day</string>
    <string name="addedDoctor">New doctor has been successfully added!</string>
    <string name="deletedDoctor">Selected doctor has been deleted!</string>
    <string name="updatedDoctor">Doctor has been updated!</string>
    <string name="addedPatient">New patient has been successfully added!</string>
    <string name="deletedPatient">Selected patient has been deleted!</string>
    <string name="updatedPatient">Patient has been updated!</string>
    <string name="addedService">New service has been successfully added!</string>
    <string name="deletedService">Selected service has been deleted!</string>
    <string name="updatedService">Service has been updated!</string>
    <string name="addedVisit">New visit has been successfully added!</string>
    <string name="deletedVisit">Selected visit has been deleted!</string>
    <string name="updatedVisit">Visit has been updated!</string>
    <string name="addedRender">New render has been successfully added!</string>
    <string name="deletedRender">Selected render has been deleted!</string>
    <string name="updatedRender">Render has been updated!</string>
    <string name="welcome">Welcome!</string>
    <string name="accessDenied">User not found!</string>
    <string-array name="patientTagNames">
        <item>code</item>
        <item>name</item>
        <item>passport</item>
        <item>address</item>
        <item>disease</item>
    </string-array>
    <string-array name="doctorTagNames">
        <item>code</item>
        <item>name</item>
        <item>passport</item>
        <item>address</item>
        <item>specialization</item>
        <item>experience</item>
        <item>berth</item>
    </string-array>
    <string-array name="serviceTagNames">
        <item>manipulation</item>
        <item>patient</item>
        <item>doctor</item>
        <item>cost</item>
        <item>date</item>
    </string-array>
    <string-array name="renderTagNames">
        <item>service</item>
        <item>patient</item>
        <item>doctor</item>
        <item>sum</item>
        <item>date</item>
    </string-array>
    <string-array name="visitTagNames">
        <item>patient</item>
        <item>date</item>
        <item>service</item>
    </string-array>
    <string-array name="typesOfRequest">
        <item>SELECT</item>
        <item>INSERT</item>
        <item>UPDATE</item>
        <item>DELETE</item>
    </string-array>
    <string-array name="tableNames">
        <item>renders</item>
        <item>patients</item>
        <item>doctors</item>
        <item>service</item>
        <item>visits</item>
    </string-array>
</resources>
